# tldr-github

./: .crates.toml  .envrc  .gitignore  CHANGELOG.md  Caddyfile  Cargo.toml  Makefile  README.md  app.css  app.js  config.json  docker-compose.yaml  fern.yaml  index.html
frontend/: app.css  app.js  index.html
graphql/: broad-repo.graphql  issue-with-activity.graphql  issue.graphql  issues.graphql  last-commit.graphql  more-detailed-issues.graphql  pull-request.graphql  pull-requests.graphql  repo-exists.graphql
migrations/2019-11-30-162424_create_repos/: up.sql
migrations/2019-12-14-180004_create_prs/: up.sql
migrations/2019-12-15-083712_create_issues/: up.sql
migrations/2019-12-18-213646_create_activity_log/: up.sql
migrations/2019-12-19-183138_create_repo_activity_log/: up.sql
migrations/2020-01-16-215023_createtracked_items_table/: up.sql
migrations/2020-01-17-230523_remove_obsolete_tables/: up.sql
src/: logger.rs  main.rs  static_files.rs  util.rs
src/config/: mod.rs
src/db/: in_memory.rs  json_storage.rs  mod.rs  schema.rs  sqlite.rs
src/domain/: api.rs  mod.rs
src/domain/updater/: mod.rs
src/filter/: mod.rs
src/github/: graphql.rs  mod.rs
src/middleware/: logger.rs  mod.rs  static_files.rs
tldr-github-frontend/: package.json
tldr-github-frontend/public/: index.html
tldr-github-frontend/src/: App.js
tldr-github-parcel/: .gitignore  fern.yaml  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
tldr-github-parcel/src/: App.tsx  Repo.tsx  Tabs.spec.tsx  Tabs.tsx  index.html  tldr-github.tsx
tldr-github-parcel/src/atoms/: GithubIcon.tsx  GlowBox.tsx  Indicator.tsx
tldr-github-parcel/src/css/: main.css
tldr-github-parcel/test/: setup.js
tldr-github-react/: package.json
tldr-github-react/public/: index.html
tldr-github-react/src/: App.js  data.js
tldr-github-svelte/: .gitignore  package-lock.json  package.json  postcss.config.js  rollup.config.js  tailwind.config.js
tldr-github-svelte/public/: global.css  index.html  ionicons.min.css
tldr-github-svelte/src/: Activity.svelte  AddNewRepoModal.svelte  AddRepo.svelte  App.svelte  Error.svelte  GlowBox.svelte  Issues.svelte  LastCommit.spec.js  LastCommit.svelte  Master.svelte  PullRequests.svelte  Recent.svelte  Repo.svelte  RepoSettings.svelte  Tailwind.svelte  main.js
tldr-github-svelte/src/atoms/: Fab.svelte  GithubIcon.svelte  GlowBox.svelte  Indicator.svelte  Label.svelte  Modal.svelte
tldr-github-svelte/src/client/: api.js
tldr-github-svelte/src/errors/: Error.svelte  errorStore.js
tldr-github-svelte/src/menu/: SideMenu.svelte
tldr-github-svelte/src/modals/: AddNewRepo.svelte  AddRepo.svelte  SelectItemsToTrack.svelte
tldr-github-svelte/src/repo/: Content.svelte  Github.svelte  Indicator.svelte  Repo.svelte  Repo2.svelte  TrackedItems.svelte
tldr-github-svelte/test/: LastCommit.spec.js  extraExpectations.js
(+12 files in other folders)
