[package]
name = "tldr-github" # the name of the package
version = "0.0.1"    # the current version, obeying semver
authors = ["Felipe Sere <felipe@sere.dev>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
async-std = { version = "1.5.0", features = ["unstable"] }
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
futures = "0.3.4"
log = "0.4"
r2d2 = "0.8.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
surf = "1.0.3"
tide = { version = "0.6.0", features = ["unstable"] }
tide-naive-static-files = "2.2.0"
graphql_client = "0.8.0"
chrono-humanize = "0.0.11"
tempfile = "3.1.0"
jfs = "0.6.2"
rand = "0.7.3"
percent-encoding = "2.1.0"
femme = "1.3.0"

[dev-dependencies]
assert-json-diff = "1.0.3"
mockall = "0.6.0"
