[package]
name = "tldr-github" # the name of the package
version = "0.0.1"    # the current version, obeying semver
authors = ["Felipe Sere <felipe@sere.dev>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
async-std = { version = "1.5", features = ["unstable"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }
log = "0.4"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "1.0"
tide = { version = "0.6", features = ["unstable"] }
tide-naive-static-files = "2.2"
graphql_client = "0.8"
chrono-humanize = "0.0.11"
tempfile = "3.1"
jfs = "0.6"
rand = "0.7"
percent-encoding = "2.1"
femme = "1.3"
sqlx = { path = "../sqlx", features = ["sqlite", "chrono"] }
async-trait = "0.1.27"
itertools = "0.9.0"
futures = "0.3.4"

[dev-dependencies]
assert-json-diff = "1.0.3"
